fix ci for android tests (using unavailable method)